[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/BlueCharacter/alienBlue_front.png" type="Texture" id=1]
[ext_resource path="res://Assets/BlueCharacter/alienBlue_walk1.png" type="Texture" id=2]
[ext_resource path="res://Assets/BlueCharacter/alienBlue_walk2.png" type="Texture" id=3]
[ext_resource path="res://Assets/BlueCharacter/alienBlue_hit.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 384.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 32.0

[node name="Enemy" type="RigidBody2D"]
collision_layer = 64
collision_mask = 95
mode = 2
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Hurt" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Hurt" to="." method="_on_Hurt_body_entered"]
